tests/positive/hello_world.osc
// Test: Basic hello world program
// Exercises: fn! main, println, string literals

fn! main() {
    println("Hello, World!");
}
